# internal/dal/model/jobs.gen.go
@@ -6,38 +6,41 @@ package model
 
 import (
 	"time"
+
+	"gorm.io/datatypes"
 )
 
 const TableNameJob = "jobs"
 
 // Job mapped from table <jobs>
 type Job struct {
-	ID               int64      `gorm:"column:id;type:bigint;primaryKey;autoIncrement:true" json:"id"`
-	CategoryID       *int64     `gorm:"column:category_id;type:bigint" json:"category_id"`
-	Title            string     `gorm:"column:title;type:character varying(150);not null" json:"title"`
-	Department       *string    `gorm:"column:department;type:character varying(100)" json:"department"`
-	Headcount        int32      `gorm:"column:headcount;type:integer;not null;default:1" json:"headcount"`
-	WorkLocation     *string    `gorm:"column:work_location;type:character varying(100)" json:"work_location"`
-	WorkType         *string    `gorm:"column:work_type;type:character varying(50)" json:"work_type"`
-	EmploymentType   *string    `gorm:"column:employment_type;type:character varying(50)" json:"employment_type"`
-	SalaryMin        *int32     `gorm:"column:salary_min;type:integer" json:"salary_min"`
-	SalaryMax        *int32     `gorm:"column:salary_max;type:integer" json:"salary_max"`
-	SalaryMonths     *int32     `gorm:"column:salary_months;type:integer" json:"salary_months"`
-	ExperienceMin    *int32     `gorm:"column:experience_min;type:integer" json:"experience_min"`
-	ExperienceMax    *int32     `gorm:"column:experience_max;type:integer" json:"experience_max"`
-	EducationLevel   *string    `gorm:"column:education_level;type:character varying(50)" json:"education_level"`
-	Description      *string    `gorm:"column:description;type:text" json:"description"`
-	Responsibilities *string    `gorm:"column:responsibilities;type:text" json:"responsibilities"`
-	Requirements     *string    `gorm:"column:requirements;type:text" json:"requirements"`
-	BonusPoints      *string    `gorm:"column:bonus_points;type:text" json:"bonus_points"`
-	Status           string     `gorm:"column:status;type:character varying(30);not null;default:draft" json:"status"`
-	Priority         string     `gorm:"column:priority;type:character varying(20);not null;default:normal" json:"priority"`
-	OwnerUserID      *int64     `gorm:"column:owner_user_id;type:bigint" json:"owner_user_id"`
-	CreatedBy        *int64     `gorm:"column:created_by;type:bigint" json:"created_by"`
-	PublishedAt      *time.Time `gorm:"column:published_at;type:timestamp without time zone" json:"published_at"`
-	ClosedAt         *time.Time `gorm:"column:closed_at;type:timestamp without time zone" json:"closed_at"`
-	CreatedAt        time.Time  `gorm:"column:created_at;type:timestamp without time zone;not null;default:CURRENT_TIMESTAMP" json:"created_at"`
-	UpdatedAt        time.Time  `gorm:"column:updated_at;type:timestamp without time zone;not null;default:CURRENT_TIMESTAMP" json:"updated_at"`
+	ID               int64             `gorm:"column:id;type:bigint;primaryKey;autoIncrement:true" json:"id"`
+	CategoryID       *int64            `gorm:"column:category_id;type:bigint" json:"category_id"`
+	Title            string            `gorm:"column:title;type:character varying(150);not null" json:"title"`
+	Department       *string           `gorm:"column:department;type:character varying(100)" json:"department"`
+	Headcount        int32             `gorm:"column:headcount;type:integer;not null;default:1" json:"headcount"`
+	WorkLocation     *string           `gorm:"column:work_location;type:character varying(100)" json:"work_location"`
+	WorkType         *string           `gorm:"column:work_type;type:character varying(50)" json:"work_type"`
+	EmploymentType   *string           `gorm:"column:employment_type;type:character varying(50)" json:"employment_type"`
+	SalaryMin        *int32            `gorm:"column:salary_min;type:integer" json:"salary_min"`
+	SalaryMax        *int32            `gorm:"column:salary_max;type:integer" json:"salary_max"`
+	SalaryMonths     *int32            `gorm:"column:salary_months;type:integer" json:"salary_months"`
+	ExperienceMin    *int32            `gorm:"column:experience_min;type:integer" json:"experience_min"`
+	ExperienceMax    *int32            `gorm:"column:experience_max;type:integer" json:"experience_max"`
+	EducationLevel   *string           `gorm:"column:education_level;type:character varying(50)" json:"education_level"`
+	Description      *string           `gorm:"column:description;type:text" json:"description"`
+	Responsibilities *string           `gorm:"column:responsibilities;type:text" json:"responsibilities"`
+	Requirements     *string           `gorm:"column:requirements;type:text" json:"requirements"`
+	BonusPoints      *string           `gorm:"column:bonus_points;type:text" json:"bonus_points"`
+	Status           string            `gorm:"column:status;type:character varying(30);not null;default:draft" json:"status"`
+	Priority         string            `gorm:"column:priority;type:character varying(20);not null;default:normal" json:"priority"`
+	OwnerUserID      *int64            `gorm:"column:owner_user_id;type:bigint" json:"owner_user_id"`
+	CreatedBy        *int64            `gorm:"column:created_by;type:bigint" json:"created_by"`
+	PublishedAt      *time.Time        `gorm:"column:published_at;type:timestamp without time zone" json:"published_at"`
+	ClosedAt         *time.Time        `gorm:"column:closed_at;type:timestamp without time zone" json:"closed_at"`
+	CreatedAt        time.Time         `gorm:"column:created_at;type:timestamp without time zone;not null;default:CURRENT_TIMESTAMP" json:"created_at"`
+	UpdatedAt        time.Time         `gorm:"column:updated_at;type:timestamp without time zone;not null;default:CURRENT_TIMESTAMP" json:"updated_at"`
+	DynamicFields    datatypes.JSONMap `gorm:"column:dynamic_fields;type:jsonb;not null;default:'{}'::jsonb" json:"dynamic_fields"`
 }
 
 // TableName Job's table name
